# stream-app

./: CMakeLists.txt  client.cpp  server.cpp  video_reader.cpp  video_reader.hpp
lib/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
src/: client.cpp  server.cpp  video_reader.cpp  video_reader.hpp
